--- a/public/index.html
+++ b/public/index.html
@@ -696,6 +696,8 @@
     <script src="/secure-render-utils.js?v=2.0.0" defer></script>
     <!-- 🔐 Reduced Mode Security Guard - Função Centralizada de Segurança -->
     <script src="/reduced-mode-security-guard.js?v=1.0.0" defer></script>
+    <!-- 🔍 PR1: Reference Trace Utils (DEVE VIR ANTES DO AUDIO ANALYZER) -->
+    <script src="/reference-trace-utils.js?v=PR1" defer></script>
     <script src="/audio-analyzer-integration.js?v=NO_CACHE_FORCE&ts=20251103211830" defer></script>
     
     <!-- Inicializar Audio Analyzer -->
