--- a/public/index.html
+++ b/public/index.html
@@ -696,6 +696,8 @@
     <script src="/secure-render-utils.js?v=2.0.0" defer></script>
     <!-- 🔐 Reduced Mode Security Guard - Função Centralizada de Segurança -->
     <script src="/reduced-mode-security-guard.js?v=1.0.0" defer></script>
+    <!-- 🔍 AUDIT: Reference Mode Auditor (ANTES de tudo) -->
+    <script src="/reference-mode-auditor.js?v=AUDIT" defer></script>
     <!-- 🆕 PR2: Analysis State Machine (PRIMEIRO - fonte de verdade) -->
     <script src="/analysis-state-machine.js?v=PR2" defer></script>
     <!-- 🔍 PR1: Reference Trace Utils (ANTES DO AUDIO ANALYZER) -->
