--- a/public/index.html
+++ b/public/index.html
@@ -698,6 +698,10 @@
     <script src="/reduced-mode-security-guard.js?v=1.0.0" defer></script>
     <!-- 🔍 AUDIT: Reference Mode Auditor (ANTES de tudo) -->
     <script src="/reference-mode-auditor.js?v=AUDIT" defer></script>
+    <!-- 🆕 REF-FLOW: Reference Flow Controller (ISOLADO E DETERMINÍSTICO) -->
+    <script src="/reference-flow.js?v=1.0.0" defer></script>
+    <!-- 🆕 REF-NORMALIZE: Reference Normalizer (SEM GÊNERO) -->
+    <script src="/reference-normalizer.js?v=1.0.0" defer></script>
     <!-- 🆕 PR2: Analysis State Machine (PRIMEIRO - fonte de verdade) -->
     <script src="/analysis-state-machine.js?v=PR2" defer></script>
     <!-- 🔍 PR1: Reference Trace Utils (ANTES DO AUDIO ANALYZER) -->
