fix(reference): Guard getRefFlow() + reset analysisState_v1 + sessionId anti-leak
- Adicionado getRefFlow() guard idempotente (resolve 'ReferenceFlowController não disponível')
- reset() agora limpa campos reference de analysisState_v1 (resolve primeira virar segunda)
- Adicionado sessionId (UUID) com validateSession() para anti-vazamento
- Substituídas chamadas diretas por getRefFlow() em audio-analyzer-integration.js
- Inicialização robusta no DOMContentLoaded do index.html
- Isolamento total genre/reference mantido (zero regressão)

--- a/public/index.html
+++ b/public/index.html
@@ -711,6 +711,14 @@
     <!-- Inicializar Audio Analyzer -->
     <script>
         document.addEventListener('DOMContentLoaded', function() {
+            // 🔒 GARANTIR que ReferenceFlowController existe SEMPRE
+            if (typeof window.getRefFlow === 'function') {
+                const refFlow = window.getRefFlow();
+                console.log('✅ [INIT] ReferenceFlowController inicializado:', refFlow.getStage());
+            } else {
+                console.warn('⚠️ [INIT] getRefFlow() não disponível ainda - será criado no primeiro uso');
+            }
+            
             // Force external refs loading (bypass embedded)
             window.REFS_ALLOW_NETWORK = true;
             window.DEBUG_ANALYZER = true;
