--- a/public/index.html
+++ b/public/index.html
@@ -698,8 +698,8 @@
     <script src="/reduced-mode-security-guard.js?v=1.0.0" defer></script>
     <!-- 🔍 AUDIT: Reference Mode Auditor (ANTES de tudo) -->
     <script src="/reference-mode-auditor.js?v=AUDIT" defer></script>
-    <!-- 🆕 REF-FLOW: Reference Flow Controller (ISOLADO E DETERMINÍSTICO) - CRÍTICO: SEM DEFER -->
-    <script src="/reference-flow.js?v=1.0.1"></script>
+    <!-- 🆕 REF-FLOW: Reference Flow Controller (ISOLADO E DETERMINÍSTICO) -->
+    <script src="/reference-flow.js?v=1.0.0" defer></script>
     <!-- 🆕 REF-NORMALIZE: Reference Normalizer (SEM GÊNERO) -->
     <script src="/reference-normalizer.js?v=1.0.0" defer></script>
     <!-- 🆕 PR2: Analysis State Machine (PRIMEIRO - fonte de verdade) -->
@@ -711,14 +711,6 @@
     <!-- Inicializar Audio Analyzer -->
     <script>
         document.addEventListener('DOMContentLoaded', function() {
-            // 🔒 GARANTIR que ReferenceFlowController existe SEMPRE
-            if (typeof window.getRefFlow === 'function') {
-                const refFlow = window.getRefFlow();
-                console.log('✅ [INIT] ReferenceFlowController inicializado:', refFlow.getStage());
-            } else {
-                console.warn('⚠️ [INIT] getRefFlow() não disponível ainda - será criado no primeiro uso');
-            }
-            
             // Force external refs loading (bypass embedded)
             window.REFS_ALLOW_NETWORK = true;
             window.DEBUG_ANALYZER = true;
