--- a/public/index.html
+++ b/public/index.html
@@ -702,8 +702,8 @@
     <script src="/reference-flow.js?v=1.0.0" defer></script>
     <!-- 🆕 REF-NORMALIZE: Reference Normalizer (SEM GÊNERO) -->
     <script src="/reference-normalizer.js?v=1.0.0" defer></script>
-    <!-- 🆕 PR2: Analysis State Machine (PRIMEIRO - fonte de verdade) -->
-    <script src="/analysis-state-machine.js?v=PR2" defer></script>
+    <!-- 🆕 PR2: Analysis State Machine (PRIMEIRO - fonte de verdade - SEM defer) -->
+    <script src="/analysis-state-machine.js?v=PR2"></script>
     <!-- 🔍 PR1: Reference Trace Utils (ANTES DO AUDIO ANALYZER) -->
     <script src="/reference-trace-utils.js?v=PR1" defer></script>
     <script src="/audio-analyzer-integration.js?v=NO_CACHE_FORCE&ts=20251103211830" defer></script>
