--- a/public/landing.html
+++ b/public/landing.html
@@ -999,8 +999,8 @@
     <!-- Hero Section -->
     <section class="hero" id="home">
         <div class="hero-content">
-            <h1 class="hero-title">BEM-VINDO AO FUTURO</h1>
-            <p class="hero-subtitle">PRODUÇÃO MUSICAL INTELIGENTE</p>
+            <h1 class="hero-title">ANALISE SUA MIX E MASTER EM 1 MINUTO</h1>
+            <p class="hero-subtitle">SAIBA ONDE ESTÁ ERRANDO E COMO CONCERTAR</p>
             <a href="login.html" class="cta-button">EXPLORAR AGORA</a>
         </div>
         
