--- a/public/index.html
+++ b/public/index.html
@@ -232,6 +232,9 @@
 
     <!-- Botões de ação do chatbot -->
     <div class="chatbot-action-buttons">
+        <button class="chatbot-action-btn" data-action="analyze">
+            <span>Analisar música</span>
+        </button>
         <button class="chatbot-action-btn" data-action="upgrade">
             <span>Assinar versão Plus</span>
         </button>
