--- a/public/index.html
+++ b/public/index.html
@@ -426,10 +426,10 @@
             <div id="audioRefGenreContainer" style="display:flex;gap:8px;align-items:center;flex-wrap:wrap;margin:4px 4px 10px 4px;">
                 <label for="audioRefGenreSelect" style="font-size:12px;opacity:.8;">Gênero de Referência:</label>
                 <select id="audioRefGenreSelect" style="background:#0e1422;color:#fff;border:1px solid #1f2b40;padding:4px 8px;border-radius:6px;font-size:12px;outline:none;">
-                    <option value="trance">Trance</option>
+                    <option value="progressive_trance">Progressive Trance</option>
                     <option value="funk_mandela">Funk Mandela</option>
                     <option value="funk_bruxaria">Funk Bruxaria</option>
-                    <option value="funk_automotivo">Funk Automotivo</option>
+                    <option value="edm">EDM</option>
                     <option value="funk_bh">Funk BH</option>
                     <option value="eletronico">Eletrônico</option>
                 </select>
@@ -572,9 +572,9 @@
                     <span class="genre-icon">🔥</span>
                     <span class="genre-name">Funk Mandela</span>
                 </button>
-                <button class="genre-card" data-genre="funk_automotivo">
-                    <span class="genre-icon">🚗</span>
-                    <span class="genre-name">Funk Automotivo</span>
+                <button class="genre-card" data-genre="edm">
+                    <span class="genre-icon">🎵</span>
+                    <span class="genre-name">EDM</span>
                 </button>
                 <button class="genre-card" data-genre="funk_bh">
                     <span class="genre-icon">⛰️</span>
@@ -588,9 +588,9 @@
                     <span class="genre-icon">🎛️</span>
                     <span class="genre-name">Eletrofunk</span>
                 </button>
-                <button class="genre-card" data-genre="trance">
+                <button class="genre-card" data-genre="progressive_trance">
                     <span class="genre-icon">🌊</span>
-                    <span class="genre-name">Trance</span>
+                    <span class="genre-name">Progressive Trance</span>
                 </button>
                 <button class="genre-card" data-genre="trap">
                     <span class="genre-icon">💎</span>
@@ -600,9 +600,9 @@
                     <span class="genre-icon">🏠</span>
                     <span class="genre-name">Tech House</span>
                 </button>
-                <button class="genre-card" data-genre="techno">
+                <button class="genre-card" data-genre="fullon">
                     <span class="genre-icon">🤖</span>
-                    <span class="genre-name">Techno</span>
+                    <span class="genre-name">Fullon</span>
                 </button>
                 <button class="genre-card" data-genre="house">
                     <span class="genre-icon">🎧</span>
@@ -612,9 +612,9 @@
                     <span class="genre-icon">🇧🇷</span>
                     <span class="genre-name">Brazilian Phonk</span>
                 </button>
-                <button class="genre-card" data-genre="phonk">
-                    <span class="genre-icon">👻</span>
-                    <span class="genre-name">Phonk</span>
+                <button class="genre-card" data-genre="rap_drill">
+                    <span class="genre-icon">🎤</span>
+                    <span class="genre-name">Rap / Drill</span>
                 </button>
             </div>
 
