fix(reference): corrigir 3 problemas do modo Referência
- Problema 1: Nomes das faixas na tabela agora exibem os nomes reais dos arquivos (com fallback robusto)
- Problema 2: Botão 'Pedir ajuda à IA' e texto de ajuda são ocultados automaticamente no modo referência
- Problema 3: PDF comparativo específico para modo referência (generateReferenceReportPDF)

Arquivos modificados:
- public/audio-analyzer-integration.js
- public/index.html (IDs adicionados para controle de visibilidade)

--- a/public/index.html
+++ b/public/index.html
@@ -541,12 +541,12 @@
                     </div>
                 </div>
 
-                <div class="analysis-helper-text">
+                <div class="analysis-helper-text" id="aiHelperText">
                     💡 Se precisar de ajuda para aplicar as melhorias, clique em <strong>"Pedir ajuda à IA"</strong> e seja redirecionado para um Chat Bot especialista em áudio.
                 </div>
 
                 <div class="analysis-actions">
-                    <button class="action-btn primary" onclick="sendModalAnalysisToChat()">
+                    <button class="action-btn primary" id="btnAskAI" onclick="sendModalAnalysisToChat()">
                         🤖 Pedir Ajuda à IA
                     </button>
                     <button class="action-btn secondary" onclick="downloadModalAnalysis()">
