--- a/public/index.html
+++ b/public/index.html
@@ -1360,5 +1360,8 @@
             });
         })();
     </script>
+    
+    <!-- Scoring Debug Visual (apenas em dev/debug) -->
+    <script src="js/scoring-debug-visual.js" defer></script>
 </body>
 </html>
