--- a/public/plano.html
+++ b/public/plano.html
@@ -85,9 +85,9 @@
             <div class="steps-header">
                 <h2 class="steps-title">📋 Etapas de Correção</h2>
                 <div class="steps-legend">
-                    <span class="legend-item critical">🔴 CRÍTICO</span>
-                    <span class="legend-item high">🟡 ALTO</span>
-                    <span class="legend-item fine">🟢 FINO</span>
+                    <span class="legend-item"><span class="legend-dot critical"></span> CRÍTICO</span>
+                    <span class="legend-item"><span class="legend-dot high"></span> ALTO</span>
+                    <span class="legend-item"><span class="legend-dot fine"></span> FINO</span>
                 </div>
             </div>
             <div class="steps-list" id="stepsList">
@@ -115,13 +115,11 @@
 
         <!-- Footer -->
         <footer class="plan-footer">
-            <p class="footer-text">
-                Plano gerado por <strong>SoundyAI</strong> • 
-                <span id="generatedAt"></span>
-            </p>
+            <p class="footer-text" id="generatedAt"></p>
             <p class="footer-disclaimer">
-                Os ajustes são pontos de partida. Resultados finais dependem de reanálise iterativa.
+                Os ajustes são pontos de partida. Resultados finais dependem de reanálise iterativa no SoundyAI.
             </p>
+            <p class="footer-brand">SoundyAI © 2025</p>
         </footer>
     </main>
 
