--- a/public/index.html
+++ b/public/index.html
@@ -290,7 +290,7 @@
             
             <div class="chatbot-branding" id="chatbotBranding">
                 <h1 class="chatbot-main-title" id="chatbotMainTitle">SoundyAI</h1>
-                <p class="chatbot-main-subtitle" id="chatbotMainSubtitle">Seu mentor virtual</p>
+                <p class="chatbot-main-subtitle" id="chatbotMainSubtitle">Seu engenheiro de áudio virtual</p>
             </div>
             
             <div class="chatbot-input-section" id="chatbotInputSection">
@@ -330,7 +330,7 @@
                 <div class="chatbot-header-centered">
                     <div class="chatbot-header-text">
                         <span class="chatbot-header-name">SoundyAI</span>
-                        <span class="chatbot-header-desc">Seu mentor virtual</span>
+                        <span class="chatbot-header-desc">Seu engenheiro de áudio virtual</span>
                     </div>
                 </div>
             </div>
