otimizacao de experiecnia do usuario

--- a/public/landing.html
+++ b/public/landing.html
@@ -1416,7 +1416,7 @@
                 <li><a href="#problem" class="nav-link">Problema</a></li>
                 <li><a href="#comparison" class="nav-link">Diferenciais</a></li>
                 <li><a href="#how-it-works" class="nav-link">Como Funciona</a></li>
-                <li><a href="login.html" class="nav-cta">Entrar</a></li>
+                <li><a href="index.html" class="nav-cta">Entrar</a></li>
             </ul>
             <div class="mobile-menu-toggle">
                 <span class="menu-bar"></span>
@@ -1435,7 +1435,7 @@
                 <p>O SoundyAI revela os erros invisíveis de LUFS, True Peak e Frequências que seus ouvidos (e seus fones) deixam passar.</p>
                 
                 <div class="hero-ctas">
-                    <a href="login.html" class="btn-primary">Analisar minha música grátis</a>
+                    <a href="index.html" class="btn-primary">Analisar minha música grátis</a>
                     <a href="#how-it-works" class="btn-secondary">Ver demonstração</a>
                 </div>
                 
@@ -1890,7 +1890,7 @@
         <div class="glass-cta">
             <h2>Sua música merece ser ouvida.</h2>
             <p>Junte-se a produtores que já elevaram o nível de suas produções com a inteligência artificial da SoundyAI.</p>
-            <a href="login.html" class="btn-primary glow-btn" style="font-size: 1.3rem; padding: 20px 50px;">COMEÇAR ANÁLISE GRATUITA</a>
+            <a href="index.html" class="btn-primary glow-btn" style="font-size: 1.3rem; padding: 20px 50px;">COMEÇAR ANÁLISE GRATUITA</a>
             <p style="margin-top: 20px; font-size: 0.9rem; opacity: 0.7;">* Sem cartão de crédito necessário para teste.</p>
         </div>
     </section>
