--- a/public/gerenciar.html
+++ b/public/gerenciar.html
@@ -10,6 +10,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vanta/0.5.24/vanta.net.min.js" defer></script>
     
     <link rel="stylesheet" href="gerenciar.css">
+    <link rel="stylesheet" href="modal-mobile-spacing.css?v=20260104">
 </head>
 <body>
     <!-- Background Elements -->
