--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" href="secure-render-styles.css?v=2.0.0">
     <link rel="stylesheet" href="upgrade-modal-styles.css?v=20251213">
     <link rel="stylesheet" href="login-required-modal.css?v=20260102">
+    <link rel="stylesheet" href="modal-mobile-spacing.css?v=20260104">
     
     <!-- Fontes otimizadas com display=swap para não bloquear renderização -->
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Poppins:wght@300;400;500;600&family=Rajdhani:wght@500;600;700&display=swap" rel="stylesheet">
