--- a/public/planos.html
+++ b/public/planos.html
@@ -10,6 +10,7 @@
     
     <!-- CSS do novo layout premium -->
     <link rel="stylesheet" href="planos.css">
+    <link rel="stylesheet" href="modal-mobile-spacing.css?v=20260104">
     
     <!--
     ============================================
