--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vanta/0.5.24/vanta.net.min.js" defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" defer></script>
     
+    <!-- 🎛️ Effects Controller V3.1 - Gerenciamento de Efeitos Vanta -->
+    <script src="effects-controller.js?v=20260105" defer></script>
+    <script src="force-vanta-debug.js?v=20260105" defer></script>
+    
     <!-- Dependências para geração de PDF - carregamento tardio pois não são críticas -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js" defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js" defer></script>
