--- a/public/index.html
+++ b/public/index.html
@@ -1454,7 +1454,7 @@
                             
                         case 'docs':
                             // Abrir documento técnico
-                            window.open('/docs/documentacao-tecnica.html', '_blank');
+                            window.open('documento-tecnico.html', '_blank');
                             break;
                             
                         case 'upgrade':
