--- a/public/documento-tecnico.html
+++ b/public/documento-tecnico.html
@@ -24,19 +24,16 @@
                 <li><a href="#1-introducao-o-que-e-a-soundyai">1. Introdução</a></li>
                 <li><a href="#2-para-quem-a-soundyai-foi-criada">2. Para quem foi criada</a></li>
                 <li><a href="#3-fluxo-correto-de-uso-ordem-ideal">3. Fluxo correto de uso</a></li>
-                <li><a href="#31-analise-por-referencia-comparacao-direta-com-artistas">3.1. Análise por Referência</a></li>
                 <li><a href="#4-entendendo-o-score-final">4. Score Final</a></li>
                 <li><a href="#5-metricas-principais-explicacao-tecnica">5. Métricas Principais</a></li>
                 <li><a href="#6-analise-de-frequencias">6. Análise de Frequências</a></li>
-                <li><a href="#7-comparacao-com-referencia-de-genero">7. Comparação com Referência de Gênero</a></li>
-                <li><a href="#8-sugestoes-inteligentes-e-plano-de-correcao">8. Sugestões Inteligentes</a></li>
-                <li><a href="#9-chatbot-inteligente-seu-assistente-virtual-de-audio">9. Chatbot Inteligente</a></li>
-                <li><a href="#10-pedir-ajuda-a-ia-analise-personalizada-pro">10. Pedir Ajuda à IA</a></li>
-                <li><a href="#11-plano-de-correcao-funcionalidade-pro">11. Plano de Correção (PRO)</a></li>
-                <li><a href="#12-relatorio-em-pdf">12. Relatório PDF</a></li>
-                <li><a href="#13-boas-praticas">13. Boas Práticas</a></li>
-                <li><a href="#14-limitacoes-da-ferramenta">14. Limitações</a></li>
-                <li><a href="#15-como-fornecer-feedback">15. Como fornecer feedback</a></li>
+                <li><a href="#7-comparacao-com-referencia-de-genero">7. Comparação com Referência</a></li>
+                <li><a href="#8-sugestoes-inteligentes-e-plano-de-correcao">8. Sugestões e Plano de Correção</a></li>
+                <li><a href="#9-plano-de-correcao-funcionalidade-pro">9. Plano de Correção (PRO)</a></li>
+                <li><a href="#10-relatorio-em-pdf">10. Relatório PDF</a></li>
+                <li><a href="#11-boas-praticas">11. Boas Práticas</a></li>
+                <li><a href="#12-limitacoes-da-ferramenta">12. Limitações</a></li>
+                <li><a href="#13-como-fornecer-feedback">13. Como fornecer feedback</a></li>
                 <li><a href="#glossario-tecnico">Glossário Técnico</a></li>
             </ul>
         </nav>
