--- a/public/documento-tecnico.html
+++ b/public/documento-tecnico.html
@@ -28,9 +28,12 @@
                 <li><a href="#5-metricas-principais-explicacao-tecnica">5. Métricas Principais</a></li>
                 <li><a href="#6-analise-de-frequencias">6. Análise de Frequências</a></li>
                 <li><a href="#7-comparacao-com-referencia-de-genero">7. Comparação com Referência</a></li>
+                <li><a href="#71-analise-por-musica-de-referencia-funcionalidade-avancada">7.1 Análise por Música de Referência</a></li>
                 <li><a href="#8-sugestoes-inteligentes-e-plano-de-correcao">8. Sugestões e Plano de Correção</a></li>
                 <li><a href="#9-plano-de-correcao-funcionalidade-pro">9. Plano de Correção (PRO)</a></li>
                 <li><a href="#10-relatorio-em-pdf">10. Relatório PDF</a></li>
+                <li><a href="#101-chatbot-soundyai-seu-assistente-virtual">10.1 Chatbot SoundyAI</a></li>
+                <li><a href="#102-pedir-ajuda-a-ia-funcionalidade-pro">10.2 Pedir Ajuda à IA</a></li>
                 <li><a href="#11-boas-praticas">11. Boas Práticas</a></li>
                 <li><a href="#12-limitacoes-da-ferramenta">12. Limitações</a></li>
                 <li><a href="#13-como-fornecer-feedback">13. Como fornecer feedback</a></li>
