--- a/public/gerenciar.html
+++ b/public/gerenciar.html
@@ -11,7 +11,7 @@
     
     <link rel="stylesheet" href="gerenciar.css">
 </head>
-<body>
+<body class="page-doc">
     <!-- Background Elements -->
     <div class="background-container">
         <!-- Container para o fundo animado Vanta.js -->
