--- a/public/index.html
+++ b/public/index.html
@@ -210,7 +210,7 @@
         console.log('[CORRECTION-PLAN] 🌐 handleCorrectionPlanClick exposta no window');
     </script>
 </head>
-<body>
+<body class="page-index">
     <!-- Menu Hambúrguer - Canto Superior Esquerdo -->
     <button class="hamburger-menu-btn" id="hamburgerMenuBtn" aria-label="Abrir menu de atalhos">
         <span class="hamburger-bar"></span>
