--- a/public/privacidade.html
+++ b/public/privacidade.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="legal.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
+<body class="page-doc">
     <!-- Background Effect -->
     <div class="legal-bg"></div>
 
