--- a/public/documento-tecnico.html
+++ b/public/documento-tecnico.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="documento-tecnico-styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Rajdhani:wght@500;600;700&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="page-doc">
     <div class="doc-container">
         <header class="doc-header">
             <h1>DOCUMENTO TÉCNICO OFICIAL</h1>
