--- a/public/landing.html
+++ b/public/landing.html
@@ -1390,7 +1390,7 @@
         }
     </style>
 </head>
-<body>
+<body class="page-doc">
 
     <!-- Background -->
     <div class="background-container">
