--- a/public/documento-tecnico.html
+++ b/public/documento-tecnico.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Documento Técnico - SoundyAI</title>
-    <link rel="stylesheet" href="documento-tecnico-styles.css">
+    <link rel="stylesheet" href="documento-tecnico-styles.css?v=20260104-fix">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Rajdhani:wght@500;600;700&display=swap" rel="stylesheet">
+    
+    <!-- 🛡️ PROTEÇÃO: Prevenir scripts da index de serem executados -->
+    <script>
+        // Marcar página como documento técnico ANTES de qualquer outro script
+        window.IS_DOCUMENTATION_PAGE = true;
+        console.log('🛡️ [DOC-PAGE] Página de documentação detectada - scripts da index serão bloqueados');
+    </script>
 </head>
 <body class="page-doc">
     <div class="doc-container">
@@ -49,6 +56,6 @@
         </footer>
     </div>
 
-    <script src="documento-tecnico-loader.js"></script>
+    <script src="documento-tecnico-loader.js?v=20260104-fix"></script>
 </body>
 </html>
