--- a/public/documento-tecnico.html
+++ b/public/documento-tecnico.html
@@ -35,6 +35,9 @@
                 <li><a href="#5-metricas-principais-explicacao-tecnica">5. Métricas Principais</a></li>
                 <li><a href="#6-analise-de-frequencias">6. Análise de Frequências</a></li>
                 <li><a href="#7-comparacao-com-referencia-de-genero">7. Comparação com Referência</a></li>
+                <li><a href="#7a-analise-de-referencia-a-ferramenta-mais-poderosa">7A. Análise de Referência ⭐ (IMPORTANTE)</a></li>
+                <li><a href="#7b-chatbot-de-ia-seu-engenheiro-de-audio-virtual">7B. Chatbot de IA 🤖</a></li>
+                <li><a href="#7c-pedir-ajuda-a-ia-feature-integrada">7C. Pedir Ajuda à IA</a></li>
                 <li><a href="#8-sugestoes-inteligentes-e-plano-de-correcao">8. Sugestões e Plano de Correção</a></li>
                 <li><a href="#9-plano-de-correcao-funcionalidade-pro">9. Plano de Correção (PRO)</a></li>
                 <li><a href="#10-relatorio-em-pdf">10. Relatório PDF</a></li>
